--- a/wonderlamp/public/css/content/styles.css
+++ b/wonderlamp/public/css/content/styles.css
@@ -16,21 +16,22 @@ body::-webkit-scrollbar{
 .navbar,.head{
     min-width:300 !important;
     user-select: none;
-    background-color: black;
+    background-color: rgba(20, 96, 158, 0.712);
 }
 
 .carosel{
     width:100vw;
     min-height: 50%;
     max-height: 80%;
-    margin-top: 20px;
+    /*margin-top: 20px;*/
 }
 .img {
     margin: auto;
-    width: 80%;
-    height: 100%;
-    background-color: rgb(95, 95, 21);
+    width: 100%;
+    height: 80vh;
+    background-color: white;
     position: relative;
+    object-fit: cover;
 }
 .img img {
     width: 100%;
@@ -93,15 +94,15 @@ body::-webkit-scrollbar{
 
 #myBtn{
     width: 100px;
-    color: rgb(16, 16, 192);
+    color: rgb(192, 189, 16);
     border: none;
     outline: none;
     
 }
 
 .foot{
-    border-top: 1px solid black;
-    background-color: rgb(97, 138, 214);
+    
+    background-color: rgba(20, 96, 158, 0.712);
 }
 
 .logo{
